fixed navbar and footer on small screen

--- a/owen_agriculture/static/css/base_style.css
+++ b/owen_agriculture/static/css/base_style.css
@@ -102,5 +102,14 @@ a:hover .topic-icon {
 }
 
 
+@media (max-width:768px){
+.border-hide-sm {
+	border:0!important
+}
+}
 
-
+@media (max-width:992px){
+.border-hide-md {
+	border:0!important
+}
+}
